# amazon-robot-simulation

./: .doxygen  .gitignore  .gitlab-ci.yml  README.md  mainpage.md
Client/: .gitignore  ApplicationMenu.cpp  ApplicationMenu.h  CMakeLists.txt  CMakeLists.txt.user.a42491b  ViewWrapper.cpp  ViewWrapper.h  main.cpp  resources.qrc
Client/controllers/: Connection.cpp  Connection.h  MapEditorController.cpp  MapEditorController.h
Client/models/: DockerFieldModel.cpp  DockerFieldModel.h  DropOffPointFieldModel.cpp  DropOffPointFieldModel.h  ProductModel.cpp  ProductModel.h  RobotFieldModel.cpp  RobotFieldModel.h  ShelfFieldModel.cpp  ShelfFieldModel.h
Client/tests/: CMakeLists.txt  tst_testclient.cpp
Client/views/: ApplicationMenu.cpp  ApplicationMenu.h  MapEditor.cpp  MapEditor.h  SimulationWindow.cpp  SimulationWindow.h
Server/: CMakeLists.txt  Controller.cpp  Controller.h  EventManager.cpp  EventManager.h  main.cpp  server.cpp  server.h
Server/models/: Docker.cpp  Docker.h  DropOffPoint.cpp  DropOffPoint.h  PathNode.cpp  PathNode.h  Product.cpp  Product.h  Robot.cpp  Robot.h  Shelf.cpp  Shelf.h
Server/tests/: CMakeLists.txt  tst_servertest.cpp
build-Client-Desktop_Qt_6_0_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-Client-Desktop_Qt_6_0_1_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-3266a4cdca7477d0a845.json  cache-v2-f61a12bd771be2cd0134.json  cmakeFiles-v1-018aee5d6d799505291b.json  cmakeFiles-v1-0c109d7f3159459bb814.json  cmakeFiles-v1-1826e96b09809ff0b138.json  codemodel-v2-9703ee0a635fe888db2e.json  codemodel-v2-e8914f68307efcd16cbc.json  codemodel-v2-f3b1b1244f4fea2381d0.json  index-2021-02-17T14-57-23-0471.json  index-2021-02-17T17-35-14-0176.json  index-2021-02-18T08-53-28-0535.json  target-Client-Debug-05ac285668888e56edaa.json  target-Client-Debug-859668f1687bca22ed58.json  target-Client-Debug-b23d4a546bfafc3a40ab.json  target-Client_autogen-Debug-12d91dfdd5ab5e876c2b.json  target-Client_autogen-Debug-7dd82d8fc8d237d43329.json  target-Client_autogen_timestamp_deps-Debug-00b267891e9e4b37ba0f.json  target-Client_autogen_timestamp_deps-Debug-76475692e3a7e1655c43.json
build-Client-Desktop_Qt_6_0_1_MinGW_64_bit-Debug/Client_autogen/: deps  mocs_compilation.cpp
build-Client-Desktop_Qt_6_0_1_MinGW_64_bit-Debug/Client_autogen/6KWYZ6CXOF/: moc_ConnectDialog.cpp  moc_ConnectDialog.cpp.d  moc_DialogBase.cpp  moc_DialogBase.cpp.d  moc_ErrorDialog.cpp  moc_ErrorDialog.cpp.d  moc_HelpDialog.cpp  moc_HelpDialog.cpp.d
build-Client-Desktop_Qt_6_0_1_MinGW_64_bit-Debug/Client_autogen/DWW7M6GQBY/: moc_ApplicationMenu.cpp  moc_ApplicationMenu.cpp.d
build-Client-Desktop_Qt_6_0_1_MinGW_64_bit-Debug/Client_autogen/EWIEGA46WW/: moc_ApplicationMenu.cpp  moc_ApplicationMenu.cpp.d  qrc_resources.cpp
documentation/FireBaseSite/: .firebaserc
documentation/FireBaseSite/public/: index.html
documentation/html/: _application_menu_8h_source.html  _connect_dialog_8h_source.html  _connection_8h_source.html  _controller_8h_source.html  _dialog_base_8h_source.html  _docker_8h_source.html  _docker_field_model_8h_source.html  _drop_off_point_8h_source.html  _drop_off_point_field_model_8h_source.html  _editor_grid_button_8h_source.html  _error_dialog_8h_source.html  _event_manager_8h_source.html  _help_dialog_8h_source.html  _main_menu_button_8h_source.html  _map_editor_8h_source.html  _map_editor_controller_8h_source.html  _new_order_dialog_8h_source.html  _order_dialog_8h_source.html  _path_node_8h_source.html  _product_8h_source.html  _product_model_8h_source.html  _products_on_shelf_dialog_8h_source.html  _robot_8h_source.html  _robot_field_model_8h_source.html  _robot_info_dialog_8h_source.html  _shelf_8h_source.html  _shelf_field_model_8h_source.html  _side_bar_button_8h_source.html  _simulation_button_8h_source.html  _simulation_window_8h_source.html  _start_sim_from_file_dialog_8h_source.html  _view_wrapper_8h_source.html  annotated.html  class_application_menu-members.html  class_application_menu.html  class_connect_dialog-members.html  class_connect_dialog.html  class_connection-members.html  class_connection.html  class_controller-members.html  (+80 more)
documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  enums_0.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+12 more)
documentation/latex/: annotated.tex  class_application_menu.eps  class_application_menu.tex  class_connect_dialog.eps  class_connect_dialog.tex  class_connection.eps  class_connection.tex  class_controller.eps  class_controller.tex  class_dialog_base.eps  class_dialog_base.tex  class_docker.eps  class_docker.tex  class_docker_field_model.eps  class_docker_field_model.tex  class_drop_off_point.eps  class_drop_off_point.tex  class_drop_off_point_field_model.eps  class_drop_off_point_field_model.tex  class_editor_grid_button.eps  class_editor_grid_button.tex  class_error_dialog.eps  class_error_dialog.tex  class_event_manager.eps  class_event_manager.tex  class_help_dialog.eps  class_help_dialog.tex  class_main_menu_button.eps  class_main_menu_button.tex  class_map_editor.eps  class_map_editor.tex  class_map_editor_controller.eps  class_map_editor_controller.tex  class_new_order_dialog.eps  class_new_order_dialog.tex  class_order_dialog.eps  class_order_dialog.tex  class_path_node.tex  class_product.eps  class_product.tex  (+30 more)
